# chat-ran

./: .dockerignore  .env  .gitattributes  README.md  config.py  conversation_graph.py  gemini_api.py  main.py  pdf_loader.py  prompt_templates.py  pyproject.toml  rag_engine.py  requirements.txt  test_gemini.py  test_openai.py
data/pdfs/: README.txt
data/vector_store/: index.pkl
